--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Feedback</title>
   <style>
     .rating_stars {
@@ -177,7 +178,7 @@
 
   <div class="links">
     <div class="google-review">
-	<a href="google.com">Review us on Google</a>
+	<a href="https://google.com">Review us on Google</a>
     </div>
     <div class="email-link">
    	<a href="#">Email us your concerns</a>
