Better email subject

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	<a href="https://google.com">Review us on Google</a>
     </div>
     <div class="email-link">
-   	<a href="#" onclick="window.open('mailto:test@gmail.com?subject=[Patient Feedback] Unsatisfactory Performance' + $('#rating_val').val() + 'stars')">Email us your concerns</a>
+   	<a href="#" onclick="window.open('mailto:test@gmail.com?subject=[Patient Feedback] [' + $('#rating_val').val() + ' stars] Unsatisfactory Experience')">Email us your concerns</a>
     </div>
   </div>
 
