--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
 
   <div class="links">
     <div class="google-review">
-	<a href="https://google.com">Review us on Google</a>
+	<a href="https://g.page/r/CYvH-fkhA-RhEBE/review">Review us on Google</a>
     </div>
     <div class="email-link">
-   	<a href="#" onclick="window.open('mailto:test@gmail.com?subject=[Patient Feedback] [' + $('#rating_val').val() + ' stars] Unsatisfactory Experience')">Email us your concerns</a>
+   	<a href="#" onclick="window.open('mailto:glendalereviews@canyonpain.com?subject=[Patient Feedback] [' + $('#rating_val').val() + ' stars] Unsatisfactory Experience')">Email us your concerns</a>
     </div>
   </div>
 
