this version of fa doesn't have brand icons

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
   <div class="links">
     <div class="google-review">
-	<a href="https://g.page/r/CYvH-fkhA-RhEBE/review" target="_blank">Review us on Google <i class="fa-brands fa-google" style="color: #38943a"></i></a>
+	<a href="https://g.page/r/CYvH-fkhA-RhEBE/review" target="_blank">Review us on Google</a>
     </div>
     <div class="email-link">
    	<a href="#" onclick="window.open('mailto:glendalereviews@canyonpain.com?subject=[Patient Feedback] [' + $('#rating_val').val() + ' stars] Unsatisfactory Experience')">Email us your concerns</a>
