Review opens in same tab

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <h2>How did we do?</h2>
   <div class="rating_faces">
     <span class='r' data-rating='2' data-value='2'>
-      <a href="https://g.page/r/CYvH-fkhA-RhEBE/review" target="_blank"><i class="fa fa-smile-o"></i></a>
+      <a href="https://g.page/r/CYvH-fkhA-RhEBE/review"><i class="fa fa-smile-o"></i></a>
     </span>
     <span class='r' data-rating='1' data-value='1'>
       <a href="#" onclick="window.open('mailto:glendalereviews@canyonpain.com?subject=[Patient Feedback] [1 rating] Unsatisfactory Experience')"><i class="fa fa-meh-o"></i></a>
